===================

v1.1.1
-------------------
! names::died() and names::born() did not return complete information
  (or even returned garbage in some cases) due to site changes
! names::spouse() and names::salary() returned garbage if the corresponding
  items were not available on the corresponding page
! trailer::getFlashCodeAllTrailers() was broken due to site changes on alltrailers.net

v1.1.0 (12.01.2009)
-------------------
+ added the imdb_topcharts and imdb_nowplaying classes provided by banzap
+ added imdb_trailers class (rewrite of code provided by banzap)
+ added showtimes images locally (since they are somehow protected at the IMDB site)
+ added name (imdb person) search

v1.0.8 (17.09.2008)
-------------------
! fixing strange problem with filmographies sometimes missing some years in the
  middle (just fixed by an ugly work-around - still not sure what is broken)
+ added the imdbXML class provided by Pablo Castorino (thanx Pablo!)
! fixed rating (due to IMDB site changes). Tnx to sourcer for the patch!
+ allowing to define a different config file defined by the constant IMDBPHP_CONFIG
! episodes() have been broken due to site changes - fixed.

v1.0.7 (02.09.2008)
-------------------
+ imdb (movie) : added method releaseInfo()
* changed the way to get the big image - should now match better
! thumbnail was not returned when big image was missing, and big image did not
  always work correctly (image names changed?)
+ tests can now be restricted to either movie only, name only, or all (default)
+ imdb_person: added method to retrieve complete filmography (ignoring categories)
+ imdb_person: added method for category "actress"

v1.0.6 (11.06.2008)
-------------------
! preventing endless loops on connection problems (i.e. IMDB site offline)
! failed pages are no longer cached
+ added the attribute lastServerResponse (3-digit codes according to RFC2616)
  to the imdb_base class. You can check this to find out why there have been